--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -26,7 +26,8 @@
     font-style : bold; 
     border : 1px dotted black; 
     border-radius : 20px;
-    padding : 0.3em;
+    padding : 0.5em;
+    box-shadow: 20px 26px 26px -2px rgba(0,0,0,0.1);
 
 }
 
