--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,10 +1,15 @@
 .desktop-ban{
+    height : 30vh;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
-    margin-top: 4em;
-    margin-bottom: 3.5em;
+    align-content: center;
+    background-image: url(../assets/Monplaisir.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 3em;
 }
 
 
@@ -17,7 +22,10 @@
 }
 
 .title {
-    margin-right : 3em
+    margin-right : 3em;
+    background-color: black;
+    color: white;
+    padding : 10px
 }
 
 .menu-liens {
@@ -28,8 +36,16 @@
     border-radius : 20px;
     padding : 0.5em;
     box-shadow: 20px 26px 26px -2px rgba(0,0,0,0.1);
+    background-color: black;
+    color: white;
+    font-weight : bold
 
 }
+
+.menu-liens:hover {
+opacity: 0.7;
+}
+
 
 
 @media screen and (max-width : 1260px){
@@ -63,16 +79,14 @@
   @media screen and (max-width : 740px){
     
     .desktop-ban{
-       
+  
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
         justify-items: center;
-        margin-top: 4em;
-        margin-bottom: 3.5em;
-        margin-left: 1em;
-        margin-right : 1em
+        margin-bottom: 0em;
+   
     }
     
     
